// Copyright 2012 The Chromium Authors
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

edition = "2023";

option optimize_for = LITE_RUNTIME;
option java_package = "org.chromium.components.variations";

package variations;

import "study.proto";
import "layer.proto";

option features.utf8_validation = NONE;

// The VariationsSeed is a protobuf response from the server that contains the
// list of studies and a serial number to uniquely identify its contents. The
// serial number allows the client to easily determine if the list of
// experiments has changed from the previous VariationsSeed seen by the client.
//
// Next tag: 7
message VariationsSeed {
  string serial_number = 1;
  repeated Study study = 2;

  // Lowercase ISO 3166-1 alpha-2 country code of the client, according to IP
  // address. Deprecated.
  string country_code = 3 [deprecated = true];

  // A version string which identifies the version of the configuration files
  // that this seed was generated from.
  string version = 4;

  // Previous implementation of layers. Do not re-use.
  reserved 5;

  // A list of layers where each study can optionally be part of one, with
  // clients ensuring that only one study per layer is enabled.
  repeated Layer layers = 6;
}
